Add model downloading script and update .gitignore for Hugging Face files
- Introduced `download_tinyllama.py` to download and save the TinyLlama model and tokenizer from Hugging Face.
- Added entries to `.gitignore` to exclude Hugging Face cache and model files.
- Created a new Jupyter notebook `debug_training.ipynb` for debugging purposes.
- Updated `requirements.txt` to reflect new dependencies and versions for compatibility with the latest libraries.
- Refactored `train_model.py` to load the model and tokenizer from a local directory and adjusted training parameters for M1 compatibility.

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,12 @@ coverage.xml
 
 # VS Code
 .vscode/ 
+
+# Hugging Face
+.cache/
+.huggingface/
+.tokenizers/
+.datasets/
+.datasets/
+tinyllama_model/
+training_results/
