--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ tqdm
 pandas==2.2.3
 numpy<2.0.0
 spacy
-transformers>=4.30.0
-datasets>=2.12.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch>=2.0.0
-accelerate>=0.20.0
-peft>=0.4.0
+transformers>=4.36.0
+accelerate>=0.25.0
+peft>=0.7.0
 scipy
-huggingface_hub
-sentencepiece
+datasets>=2.12.0
+huggingface-hub>=0.19.0
+sentencepiece>=0.1.99
+protobuf>=4.25.1
